zeit.brightcove changes
=======================

2.0.1 (unreleased)
------------------

- Import and export references (#9831).

- Fix change detection of playlists (#9976)


2.0.0 (2011-11-13)
------------------

- Impport videos and playlists into the DAV servers (#8996).

- Add backward compatibility adapters for old video and playlist unique Ids
  (#9746).


0.10.0 (2011-08-12)
-------------------

- added mediadeliverymethod in connection.


0.9.1 (2011-04-29)
------------------

- Add timeout for all Brightcove requests (#8021).


0.9.0 (2011-03-23)
------------------

- Changed mapping for ``last-semantic-change`` to ``date_first_released``

- Videos can be checked out now by the system. This allows to create free
  teasers of videos (for #7826).

- Extracted ``get_expires`` to get the me earliest expires date from a list of
  playlists and videos.

- Change indexes as the interface requires an solr attribute now (for #8559)

- Remove Brightcove content from addcentral.


0.8.0 (2010-08-16)
------------------

- New layout for video-form 

- Honour the default values of the interface in mapped properties.


0.7.0 (2010-08-09)
------------------

- Fix tests after changes in zeit.cms (#7549)
- changes some default values  
- Knopf für "Speichern und zur Suche" (#7827)

0.6.1 (2010-07-15)
------------------

- Fix brightove SOLR updater so it implements IUpdater correctly. Otherwise
  re-indexing videos doesn't work correctly.


0.6.0 (2010-07-12)
------------------

- Since brightcove caches absolute URLs better, we use the same timestamp for
  a request more often
- Use proper preview URL for brightcove content (#7030).
- Adapted last_semantic_change from date_last_modified
- Use an empty string instead of null in REST calls for brightcove does not
  recognize null
- Update brightcove videos if video_still is updated. Even though the
  modified_date is not updated, this might happen in upstream.  
- Add image-tag to video XML reference (#7625)